Several steps forward.